tests/ui/raw.stderr
error: `#[structopt(raw(...))` attributes are removed in structopt 0.3, they are replaced with raw methods

  = help: if you meant to call `clap::Arg::raw()` method you should use bool literal, like `raw(true)` or `raw(false)`
  = note: if you need to call some method from `clap::Arg/App` you should use raw method

  --> $DIR/raw.rs:13:17
   |
13 |     #[structopt(raw(case_insensitive = "true"))]
   |                 ^^^
